--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "data_processing/nc2jpg"]
 	path = data_processing/nc2jpg
 	url = https://github.com/marcosrdac/nc2jpg
+[submodule "data_processing/--force"]
+	path = data_processing/--force
+	url = git@github.com:marcosrdac/nc2jpg.git
